@@ -1,0 +1,6 @@
+﻿
+usedb TestDb connectionstring "Provider=Microsoft.Jet.OLEDB.4.0;Data Source=.;Extended Properties=dBASE IV;User ID=Admin;Password=;" provider "System.Data.OleDb"
+
+use Test
+
+
